--- a/webroot/css/jquery.jOrgChart.css
+++ b/webroot/css/jquery.jOrgChart.css
@@ -31,7 +31,8 @@
 
 /* The node */
 .jOrgChart .node {
-  background-color 		: #337ab7;
+  background 		: #3c8dbc;
+  color:#FFFFFF;
   display               : inline-block;
   width                 : 96px;
   height                : 96px;
