org chart css update

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -1,53 +1,3 @@
-body, html, div, p, span, a, h1, h2, h3, h4, h5{
-    margin              : 0;
-    padding             : 0;
-}
-
-body, html{ 
-    width               : 100%;
-}
-
-body{
-    background          : url('../images/bkgd.png') repeat top left;
-    color               : white;
-    font-family         : tahoma;
-    font-weight         : lighter;
-    padding-top         : 40px;
-}
-
-    body p{
-        font-size       : 14px;
-    }
-    
-        body p a{
-            font-size   : 16px;
-        }
-
-h1 {
-    color               : #E05E00;  
-    font-style          : italic;
-}
-
-a{
-    color               : #E05E00;  
-    text-decoration     : none;
-}
-
-a:hover{
-    text-decoration     : underline;
-}
-
-/* general */
-.clear {
-    clear: both;
-}
-
-/* Header */
-.brand{
-    color               : #E05E00 !important;   
-    font-family         : georgia;
-    font-style          : italic;
-}
 
 /* list stuff */
 #org{
@@ -78,7 +28,7 @@ a:hover{
 /* Custom node styling */
 .jOrgChart .node {
     font-size           : 14px;
-    background-color    : #35363B;
+    background-color    : #ddd;
     border-radius       : 8px;
     border              : 5px solid white;
     color               : #F38630;
